# embassy_temp

./: Cargo.toml  README.md  build.rs  clean.rs  riscv32imc.json  riscv64imc.json
.cargo/: config.toml
src/: console.rs  gpio.rs  log.rs  main.rs  simple_once.rs  static_cell.rs  time_driver.rs
